Add search by position id in basic salary find all
