# docs/swagger.json
@@ -878,6 +878,13 @@
                 ],
                 "parameters": [
                     {
+                        "type": "number",
+                        "description": "Position Id",
+                        "name": "positionId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "type": "string",
                         "default": "1",
                         "description": "Page Number",
@@ -1003,6 +1010,15 @@
                 ],
                 "tags": [
                     "BasicSalary"
+                ],
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "Position Id",
+                        "name": "positionId",
+                        "in": "query",
+                        "required": true
+                    }
                 ],
                 "responses": {
                     "200": {
