# model/search/basic_salary_search.go
@@ -1,0 +1,11 @@
+package search
+
+import "payroll/helper"
+
+type BasicSalarySearch struct {
+	PositionId int64
+}
+
+func BuildBasicSalarySearch(positionId string) BasicSalarySearch {
+	return BasicSalarySearch{PositionId: helper.StringToInt64(positionId)}
+}
